--- a/front/Styles/styles.css
+++ b/front/Styles/styles.css
@@ -11,7 +11,7 @@
 body {
     min-height: 100vh;
     width: 100%;
-    background: #009579;
+    background: #6f94c5;
 }
 
 .container {
@@ -70,7 +70,7 @@ body {
 
 .form a {
     font-size: 16px;
-    color: #009579;
+    color: #5091a5;
     text-decoration: none;
 }
 
@@ -80,7 +80,7 @@ body {
 
 .form input.button {
     color: #fff;
-    background: #009579;
+    background: #3990b8;
     font-size: 1.2rem;
     font-weight: 500;
     letter-spacing: 1px;
@@ -90,7 +90,7 @@ body {
 }
 
 .form input.button:hover {
-    background: #006653;
+    background: #346653;
 }
 
 .signup {
